--- a/index.html
+++ b/index.html
@@ -21,6 +21,15 @@
         <div class="jumbotron">
             <h1 class="text-center">Seattle Train Scheduler</h1>
         </div>
+        <div class="row">
+            <div class="col-lg-12">
+                <div class="card">
+                    <div class="card-header">
+                        Current Train Schedule
+                    </div>
+                </div>
+            </div>
+        </div>
 
     </div>
 
