add code to access firebase in app.js

--- a/index.html
+++ b/index.html
@@ -30,11 +30,11 @@
                     <table class="table table-striped">
                         <thead>
                             <tr>
-                                <th scope="col">Employee Name</th>
-                                <th scope="col">Role</th>
-                                <th scope="col">Start Date</th>
-                                <th scope="col">Months Worked</th>
-                                <th scope="col">Monthly Rate($)</th>
+                                <th scope="col">Train Name</th>
+                                <th scope="col">Destination</th>
+                                <th scope="col">Frequency (min)</th>
+                                <th scope="col">Next Arrival</th>
+                                <th scope="col">Minutes Away</th>
                             </tr>
                         </thead>
                         <tbody id = "train-list">
