--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                                 <input class="form-control" id="first-train-input" type="text" placeholder="HH:mm">
                             </div>
                             <div class="form-group row">
-                                <label for="frequencey-input">Frequency</label>
+                                <label for="frequencey-input">Frequency (min)</label>
                                 <input class="form-control" id="frequencey-input" type="number" placeholder="80000">
                             </div>
                             <button class="btn btn-default" id="add-train" type="submit">Submit</button>
