--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                             </div>
                             <div class="form-group row">
                                 <label for="first-train-input">First Train Time (HH:mm - Military Time)</label>
-                                <input class="form-control" id="first-train-input" type="time" placeholder="HH:mm AM">
+                                <input class="form-control" id="first-train-input" type="text" placeholder="HH:mm">
                             </div>
                             <div class="form-group row">
                                 <label for="frequencey-input">Frequency (min)</label>
