--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
                                 <th scope="col">Frequency (min)</th>
                                 <th scope="col">Next Arrival</th>
                                 <th scope="col">Minutes Away</th>
+                                <th scope="col">Update / Delete</th>
                             </tr>
                         </thead>
                         <tbody id = "train-list">
@@ -70,13 +71,77 @@
                                 <label for="frequencey-input">Frequency (min)</label>
                                 <input class="form-control" id="frequencey-input" type="number" placeholder="80000">
                             </div>
-                            <button class="btn btn-default" id="add-train" type="submit">Submit</button>
+                            <button class="btn btn-primary" id="add-train" type="submit">Submit</button>
                         </form>
                     </div>
                 </div>
             </div>
         </div>
     </div>
+
+        <!-- modal: update content -->
+    <div class="modal fade" id="edit" tabindex="-1" role="dialog" aria-labelledby="edit" aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal" aria-hidden="true"><span class="glyphicon glyphicon-remove" aria-hidden="true"></span></button>
+                    <h4 class="modal-title custom_align" id="Heading">Edit the train details</h4>
+                </div>
+                <div class="modal-body" id="edit-form">
+                    <form class="form-horizontal" role="form">
+                        <div class="form-group">
+                            <label for="trainName" class="col-sm-3 control-label">Train Name</label>
+                            <div class="col-sm-9">
+                                <input type="trainName" class="form-control" id="modal-trainName" placeholder="Train Name">
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            <label for="trainDestination" class="col-sm-3 control-label">Destination</label>
+                            <div class="col-sm-9">
+                                <input type="trainDestination" class="form-control" id="modal-trainDestination" placeholder="Train Destination">
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            <label for="trainTime" class="col-sm-3 control-label">Time</label>
+                            <div class="col-sm-9">
+                                <input type="text" class="form-control" id="modal-trainTime" placeholder="Train Time">
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            <label for="trainFrequency" class="col-sm-3 control-label">Frequency</label>
+                            <div class="col-sm-9">
+                                <input type="trainFrequency" class="form-control" id="modal-trainFrequeny" placeholder="Train Frequency">
+                            </div>
+                        </div>
+                    </form>
+                </div>
+                <div class="modal-footer ">
+                    <button type="button" id="update-train" class="btn btn-primary"><span class="glyphicon glyphicon-ok-sign"></span> Update</button>
+                </div>
+            </div>
+        </div>
+    </div>
+        <!-- end of modal: update content -->
+        <!-- modal: delete content -->
+    </div>
+    <div class="modal fade" id="delete" tabindex="-1" role="dialog" aria-labelledby="edit" aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal" aria-hidden="true"><span class="glyphicon glyphicon-remove" aria-hidden="true"></span></button>
+                    <h4 class="modal-title custom_align" id="Heading">Delete this entry?</h4>
+                </div>
+                <div class="modal-body">
+                    <div class="alert alert-danger">Are you sure you want to delete this Record?</div>
+                </div>
+                <div class="modal-footer ">
+                    <button type="button" class="btn btn-primary" id="remove-train"><span class="glyphicon glyphicon-ok-sign"></span> Yes</button>
+                    <button type="button" class="btn btn-primary" data-dismiss="modal"><span class="glyphicon glyphicon-remove"></span> No</button>
+                </div>
+            </div>
+        </div>
+    </div>
+            <!-- End of modal: delete content -->
     <script type="text/javascript" src="assets/javascript/app.js"></script>
 </body>
 </html>
