--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             <div class="col-lg-12">
                 <div class="card">
                     <div class="card-header text-white bg-primary">
-                        Current Train Schedule
+                        <h1>Current Train Schedule</h1>
                     </div>
                     <table class="table table-striped">
                         <thead>
