--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
     <div class="container">
         <div class="jumbotron bg-success">
             <h1 class="text-center">Seattle Train Scheduler</h1>
+            <h4 class="text-center">Current Time: <span id="timer"></span></h4>
         </div>
         <div class="row">
             <div class="col-lg-12">
